fixes extra scrollbar

--- a/styles/3-layout/_layout.scss
+++ b/styles/3-layout/_layout.scss
@@ -1,5 +1,5 @@
 .main {
-  overflow-x: hidden;
+  overflow: hidden;
   width: calc(100% - 12px);
   margin-left: 6px;
 }
